# examples-cpp

./: README.md
CubicExample/: CMakeLists.txt  README.md  recorder.cpp
cubic/: CMakeLists.txt  README.md  context_client.cpp  mic_client.cpp  recorder.cpp  recorder.h  stream_client.cpp  synchronous_client.cpp  test.raw
diatheke/: CMakeLists.txt  README.md  audio_client.cpp  cli_client.cpp  player.cpp  player.h  recorder.cpp  recorder.h
